--- a/application.yml
+++ b/application.yml
@@ -6,3 +6,7 @@ eureka:
       default-zone: http://localhost:8761/eureka/
   instance:
     hostname: localhost
+spring:
+  profiles:
+    group:
+      <group>: dev, auth
